- Add API files - Add dummy method to get user by API

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,9 @@
 url=https://www.amazon.com/
 browser=chrome
 
+#API
+urlApi = http://dummy.restapiexample.com/api/v1
+
 tags=
 
 #Users
@@ -9,7 +12,8 @@ email=
 password=
 
 #Data
-dataSearch = "search"
+dataSearch = search
+actualPhone = Samsung Galaxy Note 20
 
 
 
