--- a/challenge-api/build.gradle
+++ b/challenge-api/build.gradle
@@ -1,14 +1,47 @@
+buildscript {
+    repositories {
+        jcenter()
+        maven {
+            url 'http://repo.bodar.com'
+        }
+    }
+    dependencies {
+        classpath "io.qameta.allure:allure-gradle:2.5"
+    }
+}
 plugins {
-    id 'java'
+    id "io.qameta.allure" version "2.8.1"
 }
+def timeStampVal = getDate().toString()
+def allureResult = file("${rootProject.rootDir}/challenge-api/allure-results" + timeStampVal)
+def allureReport = file("${rootProject.rootDir}/challenge-api/allure-report")
 
-group 'org.example'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
+allure {
+    version = '2.13.8'
+    resultsDir = allureResult
+    reportDir = allureReport
 }
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile project(":challenge-core")
+    compile group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
+}
+
+configurations {
+    cucumberRuntime {
+        extendsFrom testRuntime
+    }
+}
+
+task apiFeatures(type: Test) {
+    useTestNG()
+    options {
+        jvmArgs = ['-Dcucumber.execution.strict=' + true]
+        jvmArgs = ['-Dcucumber.plugin=io.qameta.allure.cucumber5jvm.AllureCucumber5Jvm']
+        jvmArgs = ["-Dcucumber.filter.tags=" + tags]
+    }
+    // Flag to show console output.
+    testLogging.showStandardStreams = true
+    // Flag to scan for classes with @Test annotation.
+    scanForTestClasses = false
+    finalizedBy 'allureReport'
 }
