--- a/gradle.properties
+++ b/gradle.properties
@@ -5,11 +5,11 @@ browser=chrome
 #API
 urlApi = http://dummy.restapiexample.com/api/v1
 
-tags=
+tags=@Store
 
-#Users
-email=
-password=
+#Employees
+email= @fakeemail.com
+password= Pass1234
 
 #Data
 dataSearch = search
